small updates and results files cleaning

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "#required modules\n",
-    "!pip install jupyterlab\n",
     "!pip install .\n",
     "\n",
     "import subprocess\n",
@@ -67,13 +67,13 @@
     "    print(e)\n",
     "    print(\"\\033[91m\\033[1m \"+\"You must provide a props.properties file\"+\" \\033[0m\\033[91m\")\n",
     "#command line parameters\n",
-    "prefix = \"\"\n",
-    "suffix = \"\"\n",
+    "prefix = \" \"\n",
+    "suffix = \" \"\n",
     "if platform.system() == \"Windows\":\n",
     "    prefix = \"START /B \\\"\\\" \"\n",
     "    suffix = \"\"\n",
     "else:\n",
-    "    prefix = \"\"\n",
+    "    prefix = \" \"\n",
     "    suffix = \" &\""
    ]
   },
@@ -97,6 +97,16 @@
     "pheno = pd.read_csv(props.get(\"pheno\").data,sep=\"\\t\",index_col=0)\n",
     "#path to input_data\n",
     "input_path = props.get(\"working_path\").data+\"input_data/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d1c9700b-c44f-49a6-8218-486bd37ea7fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_path"
    ]
   },
   {
@@ -140,14 +150,14 @@
    "source": [
     "#Read a reaction list file\n",
     "for file in os.listdir(props.get(\"working_path\").data+\"/DARS/\"):\n",
-    "    cmd = prefix+\"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
+    "    cmd = \"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
     "    + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ReactionDistanceMatrix\"\\\n",
     "    + \" -i \"+input_path+\"recon2v2_biomass_corrected.sbml\"\\\n",
-    "    + \" -s \"+input_path+\"DARS/\"+file\\\n",
+    "    + \" -s \"+props.get(\"working_path\").data+\"DARS/\"+file\\\n",
     "    + \" -o \"+str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"+'_'.join(file.split('_')[0:3])+'_extracellexclude.tsv'\\\n",
     "    + \" -sc \"+input_path+\"recon22_scs_metex.txt\"\\\n",
     "    + \" -re \"+input_path+\"blocked_inactives_phh_exchange_exportextracell_reactions.txt\" \\\n",
-    "    + \" -u\"+suffix\n",
+    "    + \" -u\"\n",
     "    print(cmd)\n",
     "    #call ReactionDistanceMatrix Met4j app\n",
     "    subprocess.run(cmd,capture_output=False,shell=True)\n",
@@ -172,7 +182,6 @@
    "source": [
     "### Read computed distances matrices\n",
     "for mat in os.listdir(str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"):\n",
-    "    prefix = mat.replace('.tsv','')+'_cluster_'\n",
     "    title = mat.split('/')[-1].replace('.tsv','')+\" subnetwork reaction similarity\"\n",
     "    matrix = pd.read_csv(str(props.get(\"working_path\").data)+\"analysis/dist_matrices/\"+mat,sep=',',index_col='id')\n",
     "    #remove disconnected reactions\n",
@@ -180,7 +189,8 @@
     "    #thresh is the number of NA in row/col in order to remove this row/col\n",
     "    matrix.dropna(inplace=True,axis=0,thresh=matrix.shape[0]*0.7)\n",
     "    matrix.dropna(inplace=True,axis=1,thresh=matrix.shape[0]*0.7)\n",
-    "    results_analysis.extract_reactions_from_clusters(matrix,title=title,write_files=True,file_prefix=str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+mat.replace('.tsv','')+'_cluster',header=True)"
+    "    results_analysis.extract_reactions_from_clusters(matrix,title=title,write_files=True,file_prefix=str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+\\\n",
+    "                                                     mat.replace('.tsv','')+'_cluster',header=True)"
    ]
   },
   {
@@ -224,26 +234,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Ask the user for a condition to analyse\n",
-    "# file_prefix = str(input(\"Enter a condition to analyse(e.g ethanol_highvsctrls_24h))\"))\n",
-    "#TODO implement a thread pool for the subprocesses. \n",
-    "file_prefix=\"\"\n",
     "#Read a reaction list file\n",
     "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
-    "    if (file_prefix in file or file_prefix==\"\"):\n",
-    "        cmd = prefix+\"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
-    "        + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ExtractSubReactionNetwork\"\\\n",
-    "        + \" -i \"+input_path+\"/recon2v2_biomass_corrected.sbml\"\\\n",
-    "        + \" -s \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
-    "        + \" -t \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
-    "        + \" -o \"+str(props.get(\"working_path\").data)+\"analysis/subnetwork_gmls/\"+file.replace(\".tsv\",\"\")+'_undirected_r2_noisecond_extracell.gml'\\\n",
-    "        + \" -sc \"+input_path+\"/recon22_scs_metex.txt\"\\\n",
-    "        + \" -re \"+input_path+\"/blocked_inactives_phh_exchange_exportextracell_reactions.txt\"\\\n",
-    "        + \" -st\"\\\n",
-    "        + \" -u\"+suffix\n",
-    "        print(cmd)\n",
-    "        #call ReactionDistanceMatrix Met4j app\n",
-    "        subprocess.run(cmd,capture_output=False,shell=True)"
+    "    cmd = prefix+\"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
+    "    + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ExtractSubReactionNetwork\"\\\n",
+    "    + \" -i \"+input_path+\"/recon2v2_biomass_corrected.sbml\"\\\n",
+    "    + \" -s \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
+    "    + \" -t \"+str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file \\\n",
+    "    + \" -o \"+str(props.get(\"working_path\").data)+\"analysis/subnetwork_gmls/\"+file.replace(\".tsv\",\"\")+'_undirected_r2_noisecond_extracell.gml'\\\n",
+    "    + \" -sc \"+input_path+\"/recon22_scs_metex.txt\"\\\n",
+    "    + \" -re \"+input_path+\"/blocked_inactives_phh_exchange_exportextracell_reactions.txt\"\\\n",
+    "    + \" -st\"\\\n",
+    "    + \" -u\"+suffix\n",
+    "    print(cmd)\n",
+    "    #call ReactionDistanceMatrix Met4j app\n",
+    "    subprocess.run(cmd,capture_output=False,shell=True)"
    ]
   },
   {
@@ -272,6 +277,14 @@
     "            for r in rlist:\n",
     "                w_hdler.write(r+'\\n')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a323ef7-39bf-4d18-880b-cfeca739d7f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
