--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -25,8 +25,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "#required modules\n",
-    "!pip install jupyterlab\n",
     "!pip install .\n",
     "\n",
     "import os\n",
@@ -202,7 +202,8 @@
     "    os.mkdir(props.get(\"working_path\").data+\"DARS\")\n",
     "if \"DARS_direction\" not in os.listdir(props.get(\"working_path\").data):\n",
     "    os.mkdir(props.get(\"working_path\").data+\"DARS_direction\")\n",
-    "\n",
+    "if \"DARS_metric\" not in os.listdir(props.get(\"working_path\").data):\n",
+    "    os.mkdir(props.get(\"working_path\").data+\"DARS_metric\")\n",
     "for molecule in str(props.get(\"cpds\").data).split('/'):\n",
     "    indices = [s for s in list(freq_table.index) if molecule in s]\n",
     "    if len(indices) < 2:\n",
@@ -228,7 +229,7 @@
     "            else:\n",
     "                  DAR_direction[reaction_prefix+reaction] = \"UNDETERMINED\" \n",
     "    comp_freq.loc[[s.replace('R_', '') for s in list(DAR_direction.keys())]].\\\n",
-    "        to_csv(props.get(\"working_path\").data+\"/DARS/\"+molecule+\\\n",
+    "        to_csv(props.get(\"working_path\").data+\"/DARS_metric/\"+molecule+\\\n",
     "                                      '_'+str(props.get(\"time\").data).replace(\" \",\"_\")+\\\n",
     "                                        '_'+str(props.get(\"cond\").data)+\"dars_metrics.tsv\",sep=\"\\t\")\n",
     "    if str(props.get(\"baseline_noise_filtering\").data) == \"True\":\n",
