--- a/master_notebook.ipynb
+++ b/master_notebook.ipynb
@@ -14,8 +14,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "#required modules\n",
-    "!pip install jupyterlab\n",
     "!pip install ."
    ]
   },
@@ -49,7 +49,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "test_mana",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -65,7 +65,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.0"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e909ccabb7a8ccf58a4271a67ee3d5ad589421080b6e726e08d33dd22e8d7d1e"
@@ -73,5 +72,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
