--- a/partial_enumeration.ipynb
+++ b/partial_enumeration.ipynb
@@ -16,8 +16,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "#required modules\n",
-    "!pip install jupyterlab\n",
     "!pip install .\n",
     "\n",
     "import pandas as pd\n",
@@ -395,7 +395,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
