--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e244fa1a",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f9743fd2",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
     "    + \" -u\"\n",
     "    print(cmd)\n",
     "    #call ReactionDistanceMatrix Met4j app\n",
-    "    subprocess.run(cmd,capture_output=False,shell=True)\n",
+    "    subprocess.run(cmd,capture_output=True,shell=True)\n",
     "    "
    ]
   },
@@ -208,8 +208,7 @@
     "recon_model.id = 'recon2.2'\n",
     "#load hgnc data\n",
     "hgnc_data = pd.read_csv(str(props.get(\"mappingFile\").data), sep='\\t', dtype='unicode')\n",
-    "#reaction file ?\n",
-    "#glob.glob(\"working_files/computed_scores/\"+str(reaction_file).split('_')[0]+'*_computed_scores.tsv')[0]\n",
+    "\n",
     "#fill the df\n",
     "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
     "    results_analysis.generate_annotation_table(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"+file,\\\n",
@@ -235,7 +234,12 @@
    "outputs": [],
    "source": [
     "#Read a reaction list file\n",
-    "for file in os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\"):\n",
+    "list_clusters =os.listdir(str(props.get(\"working_path\").data)+\"analysis/reaction_clusters/\")\n",
+    "for file in list_clusters:\n",
+    "    #if last element, do not run in background\n",
+    "    if file == list_clusters[-1]:\n",
+    "        suffix = \" \"\n",
+    "        prefix = \" \"\n",
     "    cmd = prefix+\"java -cp met4j-toolbox-1.2.2.jar\"\\\n",
     "    + \" fr.inrae.toulouse.metexplore.met4j_toolbox.networkAnalysis.ExtractSubReactionNetwork\"\\\n",
     "    + \" -i \"+input_path+\"/recon2v2_biomass_corrected.sbml\"\\\n",
@@ -248,7 +252,7 @@
     "    + \" -u\"+suffix\n",
     "    print(cmd)\n",
     "    #call ReactionDistanceMatrix Met4j app\n",
-    "    subprocess.run(cmd,capture_output=False,shell=True)"
+    "    subprocess.run(cmd,capture_output=True,shell=True)"
    ]
   },
   {
