--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "from cobra import io\n",
     "from jproperties import Properties\n",
-    "from mana import results_analysis\n",
+    "from manamodeller import results_analysis\n",
     "\n",
     "#### Java 11 or later must be installed on your machine to run this notebook\n"
    ]
