--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -37,7 +37,7 @@
     "import numpy as np\n",
     "from jproperties import Properties\n",
     "from zipfile import ZipFile\n",
-    "from mana import dars"
+    "from manamodeller import dars"
    ]
   },
   {
