--- a/partial_enumeration.ipynb
+++ b/partial_enumeration.ipynb
@@ -27,7 +27,7 @@
     "from cobra import io\n",
     "from jproperties import Properties\n",
     "from zipfile import ZipFile\n",
-    "from mana import modelling, batchs, results_processing, dars\n"
+    "from manamodeller import modelling, batchs, results_processing, dars\n"
    ]
   },
   {
