--- a/master_notebook.ipynb
+++ b/master_notebook.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "%%capture\n",
     "#required modules\n",
-    "!pip install ."
+    "!pip install manamodeller"
    ]
   },
   {
