--- a/dars_calculation.ipynb
+++ b/dars_calculation.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "%%capture\n",
     "#required modules\n",
-    "!pip install .\n",
+    "!pip install manamodeller\n",
     "\n",
     "import os\n",
     "import glob\n",
