--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "%%capture\n",
     "#required modules\n",
-    "!pip install .\n",
+    "!pip install manamodeller\n",
     "\n",
     "import subprocess\n",
     "import os\n",
